--- a/analysis.Rmd
+++ b/analysis.Rmd
@@ -193,20 +193,182 @@ imports.85 %>% select(fuel_system) %>% dummy_cols(remove_first_dummy = TRUE)
 
 
 
-# Course 1
+# COURSE 1 : K-Nearest Neighbours
+
+## 1 K-NN: a gentle introduction
 
 ```{r, echo = FALSE, message = FALSE}
+library(dplyr)
+library(caret)
+iris
+iris <- iris
 
+mod.knn <- knn3(data = iris, Species~., k = 2) ## build the knn model
+predict(mod.knn, newdata = iris, type = "class")
+
+set.seed(123) ## for replication purpose
+
+index.tr <- sample(1:nrow(iris), replace=FALSE, size=0.75*nrow(iris))
+index.tr ## the index of the rows of iris that will be in the training set
+
+iris.tr <- iris[index.tr,] ## the training set
+iris.te <- iris[-index.tr,] ## the test set, the minus sign is telling take ALL BUT the training set
+
+mod.knn <- knn3(data=iris.tr, Species~., k=2)
+iris.te.pred <- predict(mod.knn, newdata = iris.te, type="class")
+
+table(Pred=iris.te.pred, Observed=iris.te[,5])
+
+mod.knn <- knn3(data=iris.tr, Species~., k=3)
+iris.te.pred <- predict(mod.knn, newdata = iris.te, type="class")
+
+table(Pred=iris.te.pred, Observed=iris.te[,5])
+
+class(mod.knn) # class = knn
 
 ```
 
+## 2 K-NN REGRESSION
 
-# Course 2 
+```{r, echo = FALSE, message = FALSE}
+imports.85 <- read.csv("imports-85.data", 
+                       header=FALSE, na.strings="?")# replaces the ? with NA
+
+names(imports.85) <- c("symboling", "normalized_losses", "make", "fuel_type", "aspiration",
+                       "num_doors", "body_style", "drive_wheels", "engine_location", "wheel_base",
+                       "length", "width", "height","curb_weight", "engine_type", "num_cylinders",
+                       "engine_size", "fuel_system", "bore", "stroke", "compression_ratio", "horsepower",
+                       "peak_rpm", "city_mpg", "highway_mpg", "price")#renaming the columns because not specified in the doc
+
+
+
+
+tmp <- imports.85 %>% select(where(is.numeric))#only select columns with numerical data
+tmp <- filter(tmp, complete.cases(tmp))#and then only select rows where there is no NAs
+
+tmp# tmp means temporary
+
+set.seed(123)
+index.tr <- sample(1:nrow(tmp), size=0.75*nrow(tmp), replace = FALSE)
+tmp.tr <- tmp[index.tr,]
+tmp.te <- tmp[-index.tr,]
+mod.knn <- knnreg(data=tmp.tr, price~., k=3)# 3 nearest neighbours
+tmp.pred <- predict(mod.knn, newdata=tmp.te)
+
+tmp.tr#just to view
+tmp.te#just to view
+
+tmp.te %>% mutate(pred=tmp.pred) %>%
+  ggplot(aes(x=price, y=pred)) + 
+  geom_point() + geom_abline(slope=1, intercept = 0)
+
+```
+
+## 3 K-NN: mixture of feature types
 
 ```{r, echo = FALSE, message = FALSE}
 
+## tmp is imports.85 without incomplete cases and without price
+imp.comp <- imports.85 %>% filter(complete.cases(imports.85))#select only rows with no missing data
+y <- imp.comp$price#y variable
+imp.comp <- imp.comp %>% select(!price)#x variable = all but y variable
+
+## The numerical variables in tmp are standardized
+imp.num <- imp.comp %>% select(where(is.numeric)) %>% scale() %>% as.data.frame()
+
+## the dummy variables of the numerical features of tmp are created
+library(fastDummies)
+imp.dumm <- imp.comp %>% select(!where(is.numeric)) %>% 
+  dummy_cols(remove_first_dummy = FALSE, remove_selected_columns = TRUE)
+
+## These dummy variables are added to tmp
+imp.dat <- data.frame(imp.num, imp.dumm)
+
+## The names of the two problematic brands are changed
+names(imp.dat)[c(16,25)] <- c("make_alfa_romeo","make_mercredes_benz")
+
+## The raw price is added to tmp
+imp.dat$price <- y
+
+set.seed(123)
+index.tr <- sample(1:nrow(imp.dat), size=0.75*nrow(imp.dat), replace = FALSE)
+imp.tr <- imp.dat[index.tr,]
+imp.te <- imp.dat[-index.tr,]
+mod.knn <- knnreg(data=imp.tr, price~., k=3)
+imp.pred <- predict(mod.knn, newdata=imp.te)
+imp.te %>% mutate(pred=imp.pred) %>%
+  ggplot(aes(x=price, y=pred)) + 
+  geom_point() + geom_abline(slope=1, intercept = 0)
 
 ```
+
+# Course 2 Models: Naive Bayes
+
+## 1 Conditional density plots
+
+```{r, echo = FALSE, message = FALSE}
+
+library(naivebayes)
+iris.nb <- naive_bayes(Species ~ .,
+                       data = iris, usekernel=TRUE)
+par(mfrow=c(2,2))
+plot(iris.nb, arg.num = list(col = 1:3,
+                             legend.position = "topright",
+                             legend.cex = 0.8),
+     prob="conditional")
+par(mfrow=c(1,1))
+
+iris.nb
+
+iris.nb <- naive_bayes(Species ~ .,
+                       data = iris, usekernel=FALSE) 
+par(mfrow=c(2,2))
+plot(iris.nb, arg.num = list(col = 1:3,
+                             legend.position = "topright",
+                             legend.cex = 0.8), prob="conditional")
+par(mfrow=c(1,1))
+
+iris.nb
+
+```
+
+## 2 Predictions
+
+```{r, echo = FALSE, message = FALSE}
+
+predict(iris.nb, newdata = iris[,-5])
+predict(iris.nb, newdata = iris[,-5], type="prob")
+
+```
+
+## 3 Priors
+
+```{r, echo = FALSE, message = FALSE}
+
+iris.nb <- naive_bayes(Species ~ .,
+                       data = iris, usekernel=FALSE, prior = c(0.1,0.9,0.1)) 
+par(mfrow=c(2,2))
+plot(iris.nb, arg.num = list(col = 1:3,
+                             legend.position = "topright",
+                             legend.cex = 0.8), prob="conditional")
+par(mfrow=c(1,1))
+
+predict(iris.nb, newdata = iris[,-5])
+
+```
+
+## 4 Categorical features
+
+```{r, echo = FALSE, message = FALSE}
+
+DocVis <- read.csv("DocVis.csv") # adapt the path to the file; use the Import Dataset tool
+DocVis.nb <- naive_bayes(visits~., data=DocVis, usekernel = TRUE)
+plot(DocVis.nb, prob = "conditional")
+
+table(pred=predict(DocVis.nb), obs=DocVis$visits)
+
+```
+
 
 # Course 3 
 
