--- a/analysis.Rmd
+++ b/analysis.Rmd
@@ -370,13 +370,130 @@ table(pred=predict(DocVis.nb), obs=DocVis$visits)
 ```
 
 
-# Course 3 
+# Course 3 Models: Linear and logistic regressions
+
+## 1 Linear regression for real estate transaction price predictions
+
+### 1.1 The data
 
 ```{r, echo = FALSE, message = FALSE}
+
+real_estate <- read_csv("real_estate_data.csv")
+
+```
+
+### 1.2 EDA
+
+```{r, echo = FALSE, message = FALSE}
+
+real_estate_data <- read.csv("real_estate_data.csv") ## adapt the path to the data
+# if you encountered any error with the encoding of the data (`Error in gregexpr...`), just re-run the code again
+str(real_estate_data)
+library(summarytools)
+dfSummary(real_estate_data)
+
+library(dplyr)
+library(ggplot2)
+real_estate_data %>% ggplot(aes(x=Month, y=Price, fill=as.factor(Year))) + 
+  geom_boxplot()+ facet_wrap(~as.factor(Year))
+
+library(GGally)
+real_estate_data %>% 
+  select(Price, HouseAge, Dist, Lat, Long, TransDate) %>% 
+  ggpairs()
+
+```
+
+### 1.3 Linear regression
+
+```{r, echo = FALSE, message = FALSE}
+
+set.seed(234)
+index <- sample(x=c(1,2), size=nrow(real_estate_data), replace=TRUE, prob=c(0.75,0.25)) # 1==training set, 2==test set
+dat.tr <- real_estate_data[index==1,]
+dat.te <- real_estate_data[index==2,]
+
+mod.lm <- lm(Price~TransDate+
+               HouseAge+
+               Dist+
+               NumStores+
+               Lat+
+               Long, data=dat.tr)
+summary(mod.lm)
+
+```
+
+### 1.4 Variable selection and interpretation
+
+```{r, echo = FALSE, message = FALSE}
+
+step(mod.lm) # see the result
+mod.lm.sel <- step(mod.lm) # store the final model into mod.lm.sel
+summary(mod.lm.sel)
+
+```
+
+### 1.5 Predictions
+
+```{r, echo = FALSE, message = FALSE}
+
+mod.lm.pred <- predict(mod.lm.sel, newdata=dat.te)
+plot(dat.te$Price ~ mod.lm.pred, xlab="Prediction", ylab="Observed prices")
+abline(0,1) # line showing the obs -- pred agreement
+
+#Answer
+mod.lm.pred[c(1,2)]
+```
+
+## 2 Logistic regression with visit data
+
+### 2.1 The data
+
+```{r, echo = FALSE, message = FALSE}
+
+DocVis <- read.csv("DocVis.csv") ## adapt the path
+
+```
+
+### 2.2 The model
+
+```{r, echo = FALSE, message = FALSE}
+
+set.seed(234)
+index <- sample(x=c(1,2), size=nrow(DocVis), replace=TRUE, prob=c(0.75,0.25)) # 1==training set, 2==test set
+dat.tr <- DocVis[index==1,]
+dat.te <- DocVis[index==2,]
+
+vis.logr <- glm(visits~., data=dat.tr, family="binomial")
+summary(vis.logr)
 
 
 ```
 
+### 2.3 Variable selection and interpretation of the coefficients
+
+```{r, echo = FALSE, message = FALSE}
+
+vis.logr.sel <- step(vis.logr)
+summary(vis.logr.sel)
+
+```
+
+### 2.4 Predictions
+
+```{r, echo = FALSE, message = FALSE}
+
+prob.te <- predict(vis.logr.sel, newdata = dat.te, type="response")
+pred.te <- ifelse(prob.te >= 0.5, 1, 0)
+table(Pred=pred.te, Obs=dat.te$visits)
+
+boxplot(prob.te~dat.te$visits)
+
+#Answer
+prob.te[c(1,2)]
+
+
+```
 # Course 4 
 
 ## 1 Classification tree
@@ -448,10 +565,76 @@ abline(0,1, col="red")
 ```
 
 
-# Course 5 
+# Course 5 Models: Neural Network
+
+## 1 Neural Network (NN)
+
+### 1.1 Build simple NNs with nnet
 
 ```{r, echo = FALSE, message = FALSE}
 
+library(nnet)
+
+nn1 <- nnet(Species~Sepal.Length+Petal.Width, data=iris, size=2)
+summary(nn1)
+nn2 <- nnet(Species~Sepal.Length+Petal.Width, data=iris, size=c(5,3))
+nn3 <- nnet(Species~Sepal.Length+Petal.Width, data=iris, size=2, decay=3)
+
+pred1 <- predict(nn1, type="class")
+pred2 <- predict(nn2, type="class")
+pred3 <- predict(nn3, type="class")
+
+tab1 <- table(Obs=iris$Species, Pred=pred1)
+tab2 <- table(Obs=iris$Species, Pred=pred2)
+tab3 <- table(Obs=iris$Species, Pred=pred3)
+
+(acc1 <- sum(diag(tab1))/sum(tab1))
+(acc2 <- sum(diag(tab2))/sum(tab2))
+(acc3 <- sum(diag(tab3))/sum(tab3))
+
+```
+
+### 1.2 nnet+caret: Simple hyperparameter tuning
+
+```{r, echo = FALSE, message = FALSE}
+
+library(caret)
+# this can take a few seconds to run on your computer
+set.seed(1)
+fitControl <- trainControl(method = "cv", 
+                           #`cv` stands for `cross-validation` which we will 
+                           #see during one of the upcoming courses
+                           number = 10)
+
+nnetGrid <-  expand.grid(size = seq(from = 1, to = 10, by = 1),
+                         decay = seq(from = 0.1, to = 0.5, by = 0.1))
+
+nnetFit <- train(Species ~ Sepal.Length+Petal.Width, 
+                 data = iris,
+                 method = "nnet",
+                 metric = "Accuracy",
+                 tuneGrid = nnetGrid,
+                 trControl = fitControl)
+
+plot(nnetFit)
+
+```
+
+### 1.2.1 Visualizing NNs
+
+```{r, echo = FALSE, message = FALSE}
+
+library(neuralnet)
+Species.hot <- class.ind(iris$Species) 
+iris.hot <- cbind(iris[,1:4], Species.hot)
+head(iris.hot)
+
+f <- as.formula(paste("setosa+versicolor+virginica~", paste(names(iris.hot)[1:4], collapse = " + ")))
+f
+nn4 <- neuralnet(f, data=iris.hot, hidden=2)
+nn5 <- neuralnet(f, data=iris.hot, hidden=c(2,3))
+plot(nn4, rep="best")
+plot(nn5, rep="best")
 
 ```
 
