--- a/analysis.Rmd
+++ b/analysis.Rmd
@@ -6,7 +6,7 @@ source(here::here("scripts/setup.R"))
 
 # Data Loading
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 DocVis <- read_csv("DocVis.csv")
 
 german <- read_csv("german.csv")
@@ -28,7 +28,7 @@ imports.85 <- read.csv("imports-85.data",
 
 ### Data Rename
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 names(imports.85) <- c("symboling", "normalized_losses", "make", "fuel_type", "aspiration",
                        "num_doors", "body_style", "drive_wheels", "engine_location", "wheel_base",
                        "length", "width", "height","curb_weight", "engine_type", "num_cylinders",
@@ -38,7 +38,7 @@ names(imports.85) <- c("symboling", "normalized_losses", "make", "fuel_type", "a
 
 ### Data structure and summary
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 
 str(imports.85)
 head(imports.85)
@@ -74,8 +74,7 @@ summary(imports.85)
 
 ### Graph for each variable
 
-```{r, echo = FALSE, message = FALSE}
-
+```{r, echo = T, message = FALSE,warning=FALSE}
 
 ## Individually
 p1 <- ggplot(imports.85, aes(x="price", y=price)) + 
@@ -120,7 +119,7 @@ imports.85 %>% count(fuel_system) %>%
 
 ### Several graphs
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 
 ## For the numerical variables
 imports.85 %>%
@@ -145,7 +144,7 @@ imports.85 %>%
 
 ### Scatterplot matrix for several variables
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 library(GGally)
 
 imports.85 %>% select(length, height, width, price) %>% 
@@ -166,7 +165,7 @@ imports.85 %>% select(body_style, num_doors, width, price) %>%
 
 ### Building a new feature
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 
 imports.85 %>% mutate(volume=height*width*length) %>% 
   select(price, height, width, length, volume) %>% ggpairs
@@ -174,7 +173,7 @@ imports.85 %>% mutate(volume=height*width*length) %>%
 
 ### Recoding a variable
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 
 imports.85 %>% mutate(num_cyl_num=case_when(
   num_cylinders=="two"~2, 
@@ -197,7 +196,7 @@ imports.85 %>% select(fuel_system) %>% dummy_cols(remove_first_dummy = TRUE)
 
 ## 1 K-NN: a gentle introduction
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 library(dplyr)
 library(caret)
 iris
@@ -230,18 +229,7 @@ class(mod.knn) # class = knn
 
 ## 2 K-NN REGRESSION
 
-```{r, echo = FALSE, message = FALSE}
-imports.85 <- read.csv("imports-85.data", 
-                       header=FALSE, na.strings="?")# replaces the ? with NA
-
-names(imports.85) <- c("symboling", "normalized_losses", "make", "fuel_type", "aspiration",
-                       "num_doors", "body_style", "drive_wheels", "engine_location", "wheel_base",
-                       "length", "width", "height","curb_weight", "engine_type", "num_cylinders",
-                       "engine_size", "fuel_system", "bore", "stroke", "compression_ratio", "horsepower",
-                       "peak_rpm", "city_mpg", "highway_mpg", "price")#renaming the columns because not specified in the doc
-
-
-
+```{r, echo = T, message = FALSE,warning=FALSE}
 
 tmp <- imports.85 %>% select(where(is.numeric))#only select columns with numerical data
 tmp <- filter(tmp, complete.cases(tmp))#and then only select rows where there is no NAs
@@ -266,7 +254,7 @@ tmp.te %>% mutate(pred=tmp.pred) %>%
 
 ## 3 K-NN: mixture of feature types
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 
 ## tmp is imports.85 without incomplete cases and without price
 imp.comp <- imports.85 %>% filter(complete.cases(imports.85))#select only rows with no missing data
@@ -306,7 +294,7 @@ imp.te %>% mutate(pred=imp.pred) %>%
 
 ## 1 Conditional density plots
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 
 library(naivebayes)
 iris.nb <- naive_bayes(Species ~ .,
@@ -334,7 +322,7 @@ iris.nb
 
 ## 2 Predictions
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 
 predict(iris.nb, newdata = iris[,-5])
 predict(iris.nb, newdata = iris[,-5], type="prob")
@@ -343,7 +331,7 @@ predict(iris.nb, newdata = iris[,-5], type="prob")
 
 ## 3 Priors
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 
 iris.nb <- naive_bayes(Species ~ .,
                        data = iris, usekernel=FALSE, prior = c(0.1,0.9,0.1)) 
@@ -359,9 +347,8 @@ predict(iris.nb, newdata = iris[,-5])
 
 ## 4 Categorical features
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 
-DocVis <- read.csv("DocVis.csv") # adapt the path to the file; use the Import Dataset tool
 DocVis.nb <- naive_bayes(visits~., data=DocVis, usekernel = TRUE)
 plot(DocVis.nb, prob = "conditional")
 
@@ -376,7 +363,7 @@ table(pred=predict(DocVis.nb), obs=DocVis$visits)
 
 ### 1.1 The data
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 
 real_estate <- read_csv("real_estate_data.csv")
 
@@ -384,7 +371,7 @@ real_estate <- read_csv("real_estate_data.csv")
 
 ### 1.2 EDA
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 
 real_estate_data <- read.csv("real_estate_data.csv") ## adapt the path to the data
 # if you encountered any error with the encoding of the data (`Error in gregexpr...`), just re-run the code again
@@ -406,7 +393,7 @@ real_estate_data %>%
 
 ### 1.3 Linear regression
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 
 set.seed(234)
 index <- sample(x=c(1,2), size=nrow(real_estate_data), replace=TRUE, prob=c(0.75,0.25)) # 1==training set, 2==test set
@@ -425,7 +412,7 @@ summary(mod.lm)
 
 ### 1.4 Variable selection and interpretation
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 
 step(mod.lm) # see the result
 mod.lm.sel <- step(mod.lm) # store the final model into mod.lm.sel
@@ -435,7 +422,7 @@ summary(mod.lm.sel)
 
 ### 1.5 Predictions
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 
 mod.lm.pred <- predict(mod.lm.sel, newdata=dat.te)
 plot(dat.te$Price ~ mod.lm.pred, xlab="Prediction", ylab="Observed prices")
@@ -449,16 +436,16 @@ mod.lm.pred[c(1,2)]
 
 ### 2.1 The data
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 
 DocVis <- read.csv("DocVis.csv") ## adapt the path
+DocVis$visits <- ifelse(DocVis$visits=="Yes",1,0)
 
 ```
 
 ### 2.2 The model
 
-```{r, echo = FALSE, message = FALSE}
-
+```{r, echo = T, message = FALSE,warning=FALSE}
 set.seed(234)
 index <- sample(x=c(1,2), size=nrow(DocVis), replace=TRUE, prob=c(0.75,0.25)) # 1==training set, 2==test set
 dat.tr <- DocVis[index==1,]
@@ -472,7 +459,7 @@ summary(vis.logr)
 
 ### 2.3 Variable selection and interpretation of the coefficients
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 
 vis.logr.sel <- step(vis.logr)
 summary(vis.logr.sel)
@@ -481,7 +468,7 @@ summary(vis.logr.sel)
 
 ### 2.4 Predictions
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 
 prob.te <- predict(vis.logr.sel, newdata = dat.te, type="response")
 pred.te <- ifelse(prob.te >= 0.5, 1, 0)
@@ -499,7 +486,7 @@ prob.te[c(1,2)]
 ## 1 Classification tree
 
 ### 1.1 Prepare the data
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 library(ISLR)
 library(dplyr)
 MyCarseats <- Carseats %>% mutate(SaleHigh=ifelse(Sales > 7.5, "Yes", "No"))
@@ -514,7 +501,7 @@ df.te <- MyCarseats[-index.tr,]
 
 ### 1.2 Classification tree fit and plot
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 library(rpart)
 library(rpart.plot)
 set.seed(1234)
@@ -525,7 +512,7 @@ rpart.plot(carseats.tree)
 
 ### 1.3 Pruning the tree
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 plotcp(carseats.tree)
 carseats.tree.prune <- prune(carseats.tree, cp=0.025)
 rpart.plot(carseats.tree.prune)
@@ -537,7 +524,7 @@ rpart.plot(autoprune(SaleHigh ~ ., data=df.tr))
 
 ### 1.4 Predictions
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 #answer 
 MyCarseats[1,]
 
@@ -550,7 +537,7 @@ predict(carseats.tree.prune, newdata=df.te, type="prob")
 
 ## 2 Regression tree
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 
 
 set.seed(123)
@@ -571,7 +558,7 @@ abline(0,1, col="red")
 
 ### 1.1 Build simple NNs with nnet
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 
 library(nnet)
 
@@ -596,7 +583,7 @@ tab3 <- table(Obs=iris$Species, Pred=pred3)
 
 ### 1.2 nnet+caret: Simple hyperparameter tuning
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 
 library(caret)
 # this can take a few seconds to run on your computer
@@ -622,7 +609,7 @@ plot(nnetFit)
 
 ### 1.2.1 Visualizing NNs
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 
 library(neuralnet)
 Species.hot <- class.ind(iris$Species) 
@@ -640,28 +627,28 @@ plot(nn5, rep="best")
 
 # Course 6 
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 
 
 ```
 
 # Course 7 
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 
 
 ```
 
 # Course 8 
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 
 
 ```
 
 # Course 9 
 
-```{r, echo = FALSE, message = FALSE}
+```{r, echo = T, message = FALSE,warning=FALSE}
 
 
 ```
